dev/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: zefirnikolov/usapp-db
        args: ["--default-authentication-plugin=mysql_native_password"]
        resources:
          requests:
            memory: 20Mi
            cpu: 100m
        volumeMounts:
          - name: mariadb-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - port: 3306
  type: ClusterIP
