dev/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  # minReadySeconds: 30
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: zefirnikolov/usapp-web
        resources:
          requests:
            memory: 20Mi
            cpu: 100m  # also can be 0.1 -> both are equal
---
apiVersion: v1
kind: Service
metadata:
  name: web

spec:
  selector:
    app: web
  
  ports:
    - name: http
      port: 80
  type: ClusterIP
