dev/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-routing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.zefirnikolov.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
